--- a/src/style.css
+++ b/src/style.css
@@ -6,3 +6,15 @@ canvas {
 h1 {
   color: white;
 }
+.fade-out-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 1s ease;
+  background-color: black;
+  z-index: 999;
+}
