--- a/src/style.css
+++ b/src/style.css
@@ -3,9 +3,58 @@ canvas {
   top: 0;
   left: 0;
 }
+
+#title-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  pointer-events: none;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow: scroll;
+  background-color: rgb(22, 22, 22);
+}
+
+.title-container {
+  padding: 22.2rem;
+  position: relative;
+  z-index: 2;
+}
+
 h1 {
   color: white;
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%, -50%);
+  font-size: 7rem;
+  position: fixed;
+  z-index: 1;
 }
+
+.content-container {  
+  padding: 15rem 20rem;
+  position: relative;
+  z-index: 2;
+  background-color: rgb(32, 32, 32);
+}
+
+p {
+  color: white;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+  font-size: 1.5rem;
+  margin: 0;
+  margin-right: 30rem;
+}
+
 .fade-out-screen {
   position: fixed;
   top: 0;
